@@ -1,3 +1,8 @@
+2008-12-21  Dmitry Xmelkov  <dmix@gmail.ru>
+
+	* libc/stdlib/setjmp.S: longjmp(): optimize stack pointer writing
+	in case of XMEGA devices.
+
 2009-02-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* include/util/delay.h (_delay_us): Swap _delay_us() and
